user points repo adapter
