# docs/swagger.json
@@ -6574,26 +6574,6 @@
                 }
             }
         },
-        "app.PointsDetailDTO": {
-            "type": "object",
-            "properties": {
-                "desc": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "points": {
-                    "type": "integer"
-                },
-                "task": {
-                    "type": "string"
-                },
-                "time": {
-                    "type": "string"
-                }
-            }
-        },
         "app.ProjectSummaryDTO": {
             "type": "object",
             "properties": {
@@ -7011,7 +6991,7 @@
                 "details": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/app.PointsDetailDTO"
+                        "$ref": "#/definitions/repository.UserPointsDetail"
                     }
                 },
                 "total": {
@@ -8390,6 +8370,26 @@
                     }
                 },
                 "kind": {
+                    "type": "string"
+                }
+            }
+        },
+        "repository.UserPointsDetail": {
+            "type": "object",
+            "properties": {
+                "desc": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "points": {
+                    "type": "integer"
+                },
+                "task": {
+                    "type": "string"
+                },
+                "time": {
                     "type": "string"
                 }
             }
